<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveChecker</string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">Channel Name</string>

    <string-array name="streamservices">
        <item>Twitch</item>
        <item>Justin.TV</item>
        <item>CaveTube</item>
    </string-array>

    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="addchannel">Add channel</string>
    <string name="deletemode">Channel remove mode</string>
    <string name="title_activity_settings">Settings</string>
    <string name="showonlylive">Show only live channels</string>
    <string-array name="updateinterval">
        <item >1 minute</item>
        <item >5 minutes</item>
        <item >10 minutes</item>
        <item >30 minutes</item>
        <item >1 hour</item>
    </string-array>
    <string name="channelupdatelabel">Channel update interval:</string>
    <string name="sortbyviewerslabel">Sort by viewers</string>
    <string name="SaveAndExit">Save and return</string>
    <string name="refreshlabel">Refresh</string>
    <string name="sortbychannelname">Sort by channel name</string>

</resources>
