<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<item
    android:id="@+id/additem"
    android:showAsAction="always"
    android:icon="@drawable/button"
    android:title="@string/addchannel">
</item>
<item
    android:id="@+id/deleteitem"
    android:showAsAction="always"
    android:icon="@drawable/button1"
    android:title="@string/deletemode"
    android:checkable="true"/>
<item
    android:id="@+id/sortbyviewers"
    android:showAsAction="never"
    android:title="@string/sortbyviewerslabel"
    />
<item
    android:id="@+id/sortbychannelname"
    android:showAsAction="never"
    android:title="@string/sortbychannelname"
    />
    
<item
    android:id="@+id/refresh"
    android:showAsAction="never"
    android:title="@string/refreshlabel"
    />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
