<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="160dp"
    android:background="@color/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textColor="@color/regulartext"
        android:hint="@string/channel_name" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/ChannelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/regulartext"
        android:entries="@array/streamservices" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/okbutton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/regulartext"
            android:text="@string/okButton" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textColor="@color/regulartext"
            android:text="@string/cancelButton" />

    </LinearLayout>

</LinearLayout>
